--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,13 +49,20 @@
             </div>
         </nav>
 
-        {% if get_flashed_messages() %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
             <header>
-                <div class="alert alert-primary border text-center" role="alert">
-                    {{ get_flashed_messages() | join(" ") }}
+            {% for category, message in messages %}
+                <div class="alert alert-{{category}} alert-dismissible fade show border text-center" role="alert">
+                    <span>{{message}}</span>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
+            {% endfor %}
             </header>
         {% endif %}
+        {% endwith %}
 
         <main class="container-fluid p-5">
             {% block main %}{% endblock %}
