Added a new button in dashboard.html to let user to click and finish off their day, the button onclick will redirect the user to summary page

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,8 @@
                 <span id="message2"> Make <b><u><span id="date"></span></b></u> a good one! </span>
             </div>
             <div id="score_refresh" class="col-5">
-                <span id="score"> Achievement: {{rows['score']}} / 15 </span>
+                <span id="score"> Achievement: {{rows['score']}} / 15 </span><br>
+                <button class="btn btn-primary btn-lg" type="submit" formaction="/summary" formmethod="post">Day Well Spent </button>
             </div>
         </div>
         <div id="row1" class="row">
